--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.1.2 (2014-11-25):
+	* Change to general compiling flags
+
 Version 2.1.1 (2014-11-16):
 	* Disable the compiling of examples by default
 
