--- a/README
+++ b/README
@@ -58,6 +58,11 @@ The newest version is available on GitHub:
 
     git clone http://github.com/sunqm/libcint.git
 
+It's very convenient to tryout Libcint with PySCF, which is a python
+module for quantum chemistry program
+
+    http://github.com/sunqm/pyscf.git
+
 
 Generating integrals
 --------------------
@@ -124,14 +129,17 @@ Installation
 * Build libcint
     mkdir build; cd build
     cmake ..
-    make
-    make test ARGS=-V (optional)
     make install
+
+* Build libcint with tests (optional)
+    mkdir build; cd build
+    cmake ..
+    make
+    make test ARGS=-V
 
 * Build static library (optional)
     mkdir build; cd build
     cmake -DENABLE_STATIC=1 ..
-    make
     make install
 
 
@@ -147,7 +155,7 @@ Known problems
   flags to replace the default blas link flags.  Be careful with the
   *order* of -lmkl_mc and -lmkl_def.
 
-* For plain ERI, the code can handle highest angular momentum up to 6
+* For basic ERIs, the code can handle highest angular momentum up to 6
   (present Rys-roots functions might be numerically unstable for l=5,6).
   But it has to be reduced to 5 or less for derivative or high order ERI.
   Depending on the derivative order, reduce 1 highest angular momentum
