--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-Version 2.1.3 (2014-12-01):
-	* Remove daxpy_
+Version 2.2.0 (2014-12-01):
+	* update cint1e structure
+	* add I8 support
 
 Version 2.1.2 (2014-11-25):
 	* Change to general compiling flags
