--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 libcint
 =======
 
-version 2.1.3
-2014-11-25
+version 2.2.0
+2014-12-01
 
 
 What is libcint
@@ -140,6 +140,11 @@ Installation
 * Build static library (optional)
     mkdir build; cd build
     cmake -DENABLE_STATIC=1 ..
+    make install
+
+* Compile with integer-8
+    mkdir build; cd build
+    cmake -DI8=1 ..
     make install
 
 
