--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.3.0 (2014-12-14):
+	* fix ordering bug in cartesain-GTO integrals
+	* optimize cartesian to spherical transformation
+
 Version 2.2.0 (2014-12-01):
 	* update cint1e structure
 	* add I8 support
