--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.4.0 (2014-12-24):
+	* Add 2-center and 3-center 2e integrals
+
 Version 2.3.0 (2014-12-14):
 	* fix ordering bug in cartesain-GTO integrals
 	* optimize cartesian to spherical transformation
