--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 2.5.0 (2014-01-04):
+	* Add general 2-center and 3-center 2e integrals
+	* Extend code generator for 2-center and 3-center 2e integrals 
+	* fix a tensor ordering problem of the code generator
+
 Version 2.4.0 (2014-12-24):
 	* Add 2-center and 3-center 2e integrals
 
