--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.5.3 (2014-02-26):
+	* Add integral ( p i | nuc | p j )
+
 Version 2.5.2 (2014-02-10):
 	* Expose cartesian to spherical transformation
 
