--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 Version 2.5.3 (2014-02-26):
+	* Change origin of <z>, <zz>, <r> ... integrals.  The existed
+	  <z> <r> ... integrals are renamed.
+
+Version 2.5.3 (2014-02-26):
 	* Add integral ( p i | nuc | p j )
 
 Version 2.5.2 (2014-02-10):
