--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.5.5 (2014-05-14):
+	* Provide sqrtl, expl, fabsl functions when compiler does not
+	fully support c99.
+
 Version 2.5.4 (2014-03-02):
 	* Change origin of <z>, <zz>, <r> ... integrals.  The existed
 	  <z> <r> ... integrals are renamed.
