--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 2.6.0 (2014-09-25):
+	* API Updates!  To support user-specified gaussian nuclear model,
+	the intrinsic nuclear model functions are removed.  Accordingly,
+	the 4th element of "atm" argument are changed.
+
 Version 2.5.5 (2014-05-14):
 	* Provide sqrtl, expl, fabsl functions when compiler does not
 	fully support c99.
