--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.6.1 (2014-10-07):
+	* Expose cart2sph transformation functions
+
 Version 2.6.0 (2014-09-25):
 	* API Updates!  To support user-specified gaussian nuclear model,
 	the intrinsic nuclear model functions are removed.  Accordingly,
