--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.7.0 (2016-03-03):
+	* Adjust for tensor ordering,  from  XX, YX, ZX, XY ...  to  XX, XY, XZ, YX ...
+	* Update all tests due to the change of cutoff value estimation
+
 Version 2.6.10 (2016-03-02):
 	* Hessian integrals
 	* Fix value estimation bug for high order derivatives
