--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.8.2 (2016-04-07):
+	* Long range part of range-separated Coulomb operator
+
 Version 2.8.1 (2016-04-07):
 	* New 3c1e integral <ij|p^2|k>
 
