--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 libcint
 =======
 
-version 2.8.1
-2016-04-07
+version 2.8.2
+2016-04-09
 
 
 What is libcint
@@ -149,6 +149,11 @@ Installation
 * Compile with integer-8
     mkdir build; cd build
     cmake -DI8=1 ..
+    make install
+
+* Long range part of range-separated Coulomb operator (optional)
+    mkdir build; cd build
+    cmake -DWITH_RANGE_COULOMB ..
     make install
 
 
